# nix_development

./: .gitignore  README.md  flake.nix  pyproject.toml
.devenv/: profile  run
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-3-link  flake-profile-4-link  flake-profile-5-link  flake-profile-6-link  flake-profile-7-link  flake-profile-8-link  flake-profile-9-link
.github/workflows/: test-ci.yml
package/: __main__.py
