[project]
name = "package"
version = "0.1.0"
description = "test description"
readme = "README.md"
requires-python = ">=3.12"
keywords = []
authors = []
dependencies = [
  "uvicorn",
  "fastapi",
  "aiohttp",
]

[project.optional-dependencies]
test = [
  "pytest-cov[all]",
  "pytest",
]
dev = [
  "ruff",
]
